[gd_scene load_steps=6 format=3 uid="uid://br1xb8sexb4ep"]

[ext_resource type="Theme" uid="uid://btjt5q6wn3i0f" path="res://themes/menu_ui.tres" id="1_t8pki"]
[ext_resource type="Script" uid="uid://gnu4vk2s002i" path="res://scenes/UI/settings.gd" id="2_32w1k"]
[ext_resource type="StyleBox" uid="uid://xrlawkghq6sd" path="res://themes/stylebox_gray_trans_round.tres" id="3_emn88"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4dvr"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emn88"]
bg_color = Color(0.98, 0.665583, 0.441, 0.654902)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t8pki")
script = ExtResource("2_32w1k")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
theme_type_variation = &"DragoonPanel"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
clip_children = 1
custom_minimum_size = Vector2(0, 273)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i4dvr")
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="SettingsList" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioContainer" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("3_emn88")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_emn88")

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Volume"
horizontal_alignment = 1

[node name="Master" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/Master"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/Master"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="Music" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/Music"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/Music"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="SFX" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/SFX"]
layout_mode = 2
text = "SFX"

[node name="SfxSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/SFX"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="Voice" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/Voice"]
layout_mode = 2
text = "Voice"

[node name="VoiceSlider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/Voice"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="Panel" type="Panel" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="Back" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = 105.0
offset_right = 155.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.75)
theme_override_colors/font_color = Color(0.98, 0.98, 0.98, 1)
theme_override_font_sizes/font_size = 21
text = "scroll for more options"
horizontal_alignment = 1

[connection signal="value_changed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/Master/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/SFX/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SettingsList/AudioContainer/MarginContainer/VBoxContainer/Voice/VoiceSlider" to="." method="_on_voice_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
